# trackmate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  go.mod  pyproject.toml
.project-loop/: agents-rule.md
alembic/: env.py
docs/: README.md  architecture.md  current-architecture.md  go-cutover-runbook.md  go-migration.md  migration.md  operations.md
inbox/: README.md
migrations/: 202605280001_go_baseline.sql  202605280002_drop_materials.sql  202605280003_drop_alembic_version.sql  202605280004_trackmate_10_go_announcement.sql  202606030001_track_input_message_sources.sql  202606030002_normalize_jsonb_payloads.sql  202606230001_add_routines_and_goals.sql  202606230002_add_goal_nudge_cooldowns.sql  202606230003_trackmate_11_announcement.sql  202606240001_topic_scoped_pending_and_routine_deadlines.sql  202606290001_drop_legacy_pending_input_unique.sql  202606290002_routine_notice_ttl.sql  202606290003_track_goal_source_message.sql  202607020001_track_routine_source_message.sql
scripts/: backup_docker_db.sh  reset_dev_db.sh  reset_docker_db.sh  restore_docker_db.sh  update_docker_app.sh
tests/: conftest.py  test_custom_progress_updates.py  test_dispatch_alerts.py  test_domain_rules.py  test_material_artifacts.py  test_material_batching.py  test_persistence_constraints.py  test_progress_publishing.py  test_rich_text.py  test_telegram_formatters.py  test_telegram_keyboards.py  test_telegram_middleware.py  test_today_alert_lifecycle.py  test_today_creation.py  test_today_reporting.py
(+124 files in other folders)
