[project]
name = "trackmate"
version = "0.1.0"
description = "Telegram accountability bot for shared materials and daily focus."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "aiogram==3.23.0",
  "sqlalchemy>=2.0.41,<2.1.0",
  "alembic>=1.16.0,<1.17.0",
  "asyncpg>=0.30.0,<0.31.0",
  "greenlet>=3.2.4,<3.3.0",
  "pydantic-settings>=2.10.0,<2.11.0",
  "structlog>=25.4.0,<25.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<8.5.0",
  "pytest-asyncio>=1.0.0,<1.1.0",
  "aiosqlite>=0.21.0,<0.22.0",
  "ruff>=0.12.0,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackmate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
